# edycutjong-ai-agents

./: .env.example  .gitignore  AGENTS.md  README.md  agent_status_report.md  agent_translations.json  agents-missing-tests.txt  app.py  config.toml  conftest.py  examples.py  fix_translations.py  generate_translations.py  i18n.py  requirements.txt  test_all_agents.sh
.Jules/: palette.md
0/: AGENTS.md
_scripts/: agent_translations.json  app.py  apply_pragmas.py  coverage.json  create_translation_prompt.py  examples.py  generate_missing_tests.py  generate_report.py  i18n.py  test_all.sh
agent-changelog-writer/: AGENTS.md
agent-code-review-bot/: AGENTS.md
agent-code-reviewer/: AGENTS.md
agent-dead-code-finder/: AGENTS.md  README.md  package-lock.json
agent-dependency-updater/: AGENTS.md  README.md  package-lock.json
agent-docs-qa/: AGENTS.md
agent-documentation-writer/: AGENTS.md
agent-incident-responder/: AGENTS.md
agent-license-auditor/: AGENTS.md  README.md  package.json
agent-pr-review-assistant/: app.py  test_app.py
agent-test-writer/: AGENTS.md
api-monitor/: main.py
misc/research-data/research-summarizer-agent/: .env.example  AGENTS.md  README.md  config.py  coverage.json  main.py  pyproject.toml  requirements.txt
misc/research-data/research-summarizer-agent/agent/: researcher.py  tools.py
misc/research-data/research-summarizer-agent/prompts/: system_prompts.py
misc/research-data/research-summarizer-agent/tests/: test_agent.py  test_main_coverage.py  test_utils.py
misc/research-data/research-summarizer-agent/utils/: pdf_generator.py
(+2559 files in other folders)
